--- a/src/Component/Navbarstyle.css
+++ b/src/Component/Navbarstyle.css
@@ -1,51 +1,47 @@
-.top-nav{
+.top-nav {
   display: flex;
   flex-direction: row;
   width: 100%;
 
 }
-.navbar-items{
+
+.navbar-items {
   display: flex;
   list-style: none;
   margin-top: 40px;
-  
+
 }
-#list-items{
+
+#list-items {
   text-decoration: none;
-  font-family: 'Nunito Sans',sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   list-style: none;
   margin-left: 20px;
   font-size: large;
   font-weight: bold;
   font-family: 'Raleway', sans-serif;
-  color:#000000 ;
+  color: #000000;
   padding-left: 0%;
 }
-a{
+
+a {
   list-style: none;
   text-decoration: none;
 }
 
-.first-half{
+.first-half {
   width: 100%;
   display: flex;
   justify-content: space-between;
   letter-spacing: 0;
 
 }
-#logo{
+
+#logo {
   margin-left: 20px;
 }
-:root {
-  --primary-color: #000839;
-  --primary-shades: #00020b;
-  --para-color: #80849c;
-  --helper-color: #0081ff;
-  --white: #fff;
-  --bg-color: #e6e6eb;
-}
-.btn1
-{
+
+.btn1 {
   background-color: var(--helper-color);
   border: 1px solid var(--helper-color);
   color: var(--white);
@@ -59,12 +55,10 @@ a{
   text-transform: uppercase;
   display: inline-block;
   border-radius: 8px;
- 
+
 }
 
-.btn2
-{
-
+.btn2 {
   background-color: var(--helper-color);
   border: 1px solid var(--helper-color);
   color: var(--white);
@@ -78,55 +72,64 @@ a{
   display: inline-block;
   border-radius: 8px;
 }
+
 .btn2:hover,
 .btn2:active {
-background-color: var(--white);
-color: var(--helper-color);
-}
-.btn1:hover,
-.btn1:active
-{
   background-color: var(--white);
   color: var(--helper-color);
 }
-.button{
+
+.btn1:hover,
+.btn1:active {
+  background-color: var(--white);
+  color: var(--helper-color);
+}
+
+.button {
   margin-right: 20px;
   padding-left: 0%;
   margin-top: 30px;
 }
-#logo{
+
+#logo {
   width: 150px;
   height: 80px;
   margin-top: 10px;
 }
-.dropdown-list{
+
+.dropdown-list {
   display: none;
   position: absolute;
-  
+
 }
-.dropdown-list ul{
+
+.dropdown-list ul {
   display: block;
   margin-top: 10px;
   font-weight: bold;
 }
-.dropdown-items{
+
+.dropdown-items {
   font-family: 'Raleway', sans-serif;
-  color:#0e22a7 ;
+  color: #0e22a7;
   text-decoration: none;
   display: flex;
   justify-content: space-around;
-  font-size: 15px;;
-  
+  font-size: 15px;
+  ;
+
 }
-li{
+
+li {
   list-style: none;
 }
 
-.navbar-items :hover > .dropdown-list{
-  display:contents;
+.navbar-items :hover>.dropdown-list {
+  display: contents;
 }
-.drop{
-  position:absolute;
+
+.drop {
+  position: absolute;
   top: 4rem;
   left: 12rem;
   box-shadow: 0 3px 10px rgb(192, 186, 186);
@@ -138,17 +141,21 @@ li{
   flex-direction: column;
   gap: 0.5rem;
 }
-#dropdown-a{
+
+#dropdown-a {
   margin-top: 10px;
 }
-#dropdown-b{
+
+#dropdown-b {
   margin-top: 10px;
 }
-.hamburger{
+
+.hamburger {
   display: none;
   cursor: pointer;
 }
-.bar{
+
+.bar {
   display: block;
   width: 25px;
   height: 3px;
@@ -157,140 +164,164 @@ li{
   transition: all 0.3s ease;
   background-color: rgb(0, 0, 0);
 }
-.nav-button{
+
+.nav-button {
   display: none;
 }
-.responcive-navcontent{
+
+.responcive-navcontent {
   display: none;
 }
 
 
 
-@media(max-width:992px){
-  .hamburger{
+@media(max-width:992px) {
+  .hamburger {
     display: block;
   }
- .hamburger.active .bar:nth-child(2){
+
+  .hamburger.active .bar:nth-child(2) {
     opacity: 0;
   }
- .hamburger.active .bar:nth-child(1){
+
+  .hamburger.active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
   }
- .hamburger.active .bar:nth-child(3){
+
+  .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
   }
-  .first-half{
+
+  .first-half {
     display: none;
   }
+
   .closeIcon {
     display: none;
   }
+
   .showMenu {
     transform: translateY(0);
   }
 
-  
 
-  .nav-button-bars{
+
+  .nav-button-bars {
     display: flex;
     flex-direction: row;
     width: 100%;
     margin-top: 20px;
     justify-content: end;
     margin-right: 20px;
-  
+
   }
-  .nav-button{
+
+  .nav-button {
     display: block;
     margin-right: 20px;
   }
-  .hamburger{
+
+  .hamburger {
     margin-top: 4px;
     margin-right: 20px;
   }
-  .responcive-navcontent{
+
+  .responcive-navcontent {
     display: block;
   }
-  .resp-navmenu{
+
+  .resp-navmenu {
     width: 100%;
     height: 300px;
     margin-top: 50px;
   }
-  .resp-navitem2{
+
+  .resp-navitem2 {
     margin-top: 20px;
   }
-  .resp-navitem3{
+
+  .resp-navitem3 {
     margin-top: 20px;
   }
-  .resp-navitem4{
+
+  .resp-navitem4 {
     margin-top: 20px;
   }
-  .resp-navitem5{
+
+  .resp-navitem5 {
     margin-top: 20px;
   }
- #resp-navitems{
-  text-decoration: none;
-  font-family: 'Nunito Sans',sans-serif;
-  list-style: none;
-  margin-left: 20px;
-  font-size: large;
-  font-weight: bold;
-  font-family: 'Raleway', sans-serif;
-  color:#000000 ;
-  padding-left: 0%;
-}
-.resp-navbutton{
-  display: flex;
-  justify-content: center;
-}
-body{
-  width: 100%;
-  margin: 0%;
-  padding: 0%;
-}
-.resp-tooldrop {
-  position: relative;
-  display: inline-block;
+
+  #resp-navitems {
+    text-decoration: none;
+    font-family: 'Nunito Sans', sans-serif;
+    list-style: none;
+    margin-left: 20px;
+    font-size: large;
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
+    color: #000000;
+    padding-left: 0%;
+  }
+
+  .resp-navbutton {
+    display: flex;
+    justify-content: center;
+  }
+
+  body {
+    width: 100%;
+    margin: 0%;
+    padding: 0%;
+  }
+
+  .resp-tooldrop {
+    position: relative;
+    display: inline-block;
+  }
+
+  .resp-toolcontent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    left: 4rem;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  .resp-toolcontent a {
+    color: black;
+    padding: 12px 16px;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: medium;
+    font-weight: lighter;
+    text-decoration: none;
+    display: block;
+  }
+
+  .resp-toolcontent a:hover {
+    background-color: #f1f1f1
+  }
+
+  .resp-tooldrop:hover .resp-toolcontent {
+    display: block;
+  }
+
+  .resp-tooldrop:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+
 }
 
-.resp-toolcontent {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  left: 4rem;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.resp-toolcontent a {
-  color: black;
-  padding: 12px 16px;
-  font-family: 'Nunito Sans',sans-serif;
-  font-size: medium;
-  font-weight: lighter;
-  text-decoration: none;
-  display: block;
-}
-
-.resp-toolcontent a:hover {background-color: #f1f1f1}
-
-.resp-tooldrop:hover .resp-toolcontent {
-  display: block;
-}
-
-.resp-tooldrop:hover .dropbtn {
-  background-color: #3e8e41;
-}
-
-}
-@media(max-width:440px){
-  .nav-button-bars{
+@media(max-width:440px) {
+  .nav-button-bars {
     display: flex;
     flex-direction: column;
-    
+
   }
-  .nav-button{
+
+  .nav-button {
     margin-left: 30px;
   }
 }
