--- a/src/Component/homepagestyle.css
+++ b/src/Component/homepagestyle.css
@@ -1,20 +1,13 @@
-p {
-    margin: 0%;
-    /* font-size: x-large; */
-    font-weight: 900;
-}
-
-:root {
-    --primary-color: #000839;
-    --primary-shades: #00020b;
-    --para-color: #80849c;
-    --helper-color: #0081ff;
-    --white: #fff;
-    --bg-color: #e6e6eb;
-}
-
 body {
     font-family: 'Nunito Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: .5px;
+    line-height: 1.375;
+    color: #343a40;
+    margin: 0;
+    padding: 0;
+    background: #fff;
 }
 
 .Container {
@@ -24,28 +17,24 @@ body {
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: stretch;
 }
 
 .conn1 {
-    align-items: center;
-    margin-top: 9%;
-    width: 60%;
-    height: 620px;
+    margin-top: 4%;
+    height: 600px;
 }
 
 .conn2 {
-    width: 100%;
-    height: 620px;
+    height: 600px;
 }
 
 #Image {
     background-size: cover;
-    height: 550px;
-    float: right;
+    height: 500px;
 }
 
 .home_title {
-    font-family: 'Neuton', serif;
     font-weight: 600;
     letter-spacing: 1.8px;
     max-width: 400px;
@@ -56,7 +45,6 @@ body {
 }
 
 .home_subtitle {
-    font-family: 'Neuton', serif;
     line-height: 1.4;
     color: #646464;
     margin: 0%;
@@ -74,7 +62,6 @@ body {
 .input_email {
     font-size: 16px;
     font-weight: 200;
-    font-family: 'Neuton', serif;
     width: 85%;
     height: auto;
     padding: 13px 15px;
@@ -128,7 +115,6 @@ h5 {
     letter-spacing: .6px;
     display: inline-block;
     margin-top: 8px;
-    font-family: 'Neuton', serif;
 }
 
 .agree_text {
@@ -137,16 +123,46 @@ h5 {
 }
 
 .section_title {
-    font-size: 24px;
-    font-weight: bold;
     text-align: center;
-    color: var(--primary-color-2);
     margin-bottom: 30px;
+}
+
+.section_title h2 {
+    font-size: 44px;
+    margin-bottom: 0px;
+    color: var(--primary-color-2);
+}
+
+.section_title p {
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 1.41px;
+    line-height: 1.35;
+    margin-top: 0px;
+    color: var(--metal);
+}
+
+@media(max-width:1100px) {
+    #Image {
+        height: 400px;
+    }
+
+    .section_title h2 {
+        font-size: 34px;
+    }
+
+    .section_title p {
+        font-size: 16px;
+    }
 }
 
 @media(max-width:992px) {
     .conn1 {
         height: fit-content;
+    }
+
+    #Image {
+        height: 500px;
     }
 
     .Container {
