--- a/src/pages/dashboard/dashboardstyle.module.css
+++ b/src/pages/dashboard/dashboardstyle.module.css
@@ -1,6 +1,7 @@
 :root {
     --helper-color: #1264fa;
     --white: #fff;
+    --primary-color-2: #1C8090;
 }
 body
 {
@@ -15,7 +16,7 @@ body
     font-family:'Times New Roman', Times, serif;
     font-size: 40px;
     font-weight: 400;
-    color: rgb(46, 46, 53);
+    color:var(--primary-color-2);
     margin-left: 50px;
 }
 
@@ -28,7 +29,7 @@ h1 {
 
 .container3 {
     display: grid;
-    column-gap: 50px;
+    column-gap: 20px;
     width: 100%;
     row-gap: 30px;
     margin-top: 40px;
@@ -39,7 +40,7 @@ h1 {
     width: 90%;
     background-size: cover;
     background-color: #fff;
-    height: 200px;
+    height: 150px;
     overflow: hidden;
     border-radius: 15px;
     padding: 14px 16px;
@@ -77,8 +78,8 @@ h1 {
 
 .tool_icon {
     height: 70px;
-    width: 90px;
-    margin: 3px 4px;
+    width: 50px;
+    margin-left: 0%;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -93,13 +94,13 @@ h1 {
 .tool_head_text {
     max-width: 100%;
     display: flex;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 20px;
     flex-direction: column;
     justify-content: center;
     padding-left: 0%;
     overflow: hidden;
-    color: rgb(39, 35, 35);
+    color:var(--primary-color-2);
     height: 70px;
     margin-top: 2px;
     text-decoration: none;
@@ -121,7 +122,7 @@ h1 {
     background-size: cover;
     position: static;
     width: 100%;
-    height: 300px;
+    height: 150px;
 
 }
 
@@ -129,14 +130,14 @@ h1 {
     background-size: cover;
     position: static;
     width: 100%;
-    height: 300px;
+    height: 150px;
 }
 
 .con4 {
     background-size: cover;
     position: static;
     width: 100%;
-    height: 300px;
+    height: 150px;
 }
 
 .con4:hover {
