--- a/src/pages/Fillters/productstyle.module.css
+++ b/src/pages/Fillters/productstyle.module.css
@@ -1,211 +1,145 @@
-.Main_header
-{
-    margin-top: 50px;
+.Main_header {
+    margin-top: 80px;
+    margin-right: 40px;
+    margin-left: 40px;
+    margin-bottom: 80px;
+    padding-bottom: 20px;
+    border: 1px solid rgb(217, 224, 232);
+    border-radius: 5px;
 }
-.top_head{
+
+.top_head {
     width: 100%;
     display: flex;
     flex-direction: row;
-   height: 50px;
-   background-color: rgba(207, 202, 202, 0.712);
-   
+    height: 50px;
+    background-color: rgba(207, 202, 202, 0.712);
 }
-#top{
+
+#top {
     font-family: 'News Cycle', sans-serif;
     font-weight: bold;
 }
-.item1{
+
+.item1 {
     width: 10%;
-    margin-top: 15px;
-    font-family: 'News Cycle', sans-serif;
-    font-weight: bold;
- 
-} 
-.item2{
-    width: 25%;
     margin-top: 15px;
     font-family: 'News Cycle', sans-serif;
     font-weight: bold;
 
 }
-.item3{
-    width: 15%;
-    margin-top: 15px;
-   text-align: center;
-   font-family: 'News Cycle', sans-serif;
-   font-weight: bold;
- 
+
+.top_head div {
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: 0px;
+    z-index: 1;
+    font-weight: bold;
+    color: rgb(43, 57, 72);
+    user-select: none;
+    background-color: rgb(242, 245, 247);
+
 }
-.item4{
+
+.item4 {
     width: 15%;
     margin-top: 15px;
     text-align: center;
     font-family: 'News Cycle', sans-serif;
     font-weight: bold;
- 
+
 }
-.item5{
+
+.item5 {
     width: 15%;
     margin-top: 15px;
     text-align: center;
     font-family: 'News Cycle', sans-serif;
     font-weight: bold;
-  
+
 }
-.item6{
+
+.item6 {
     width: 15%;
     margin-top: 15px;
     text-align: center;
     font-family: 'News Cycle', sans-serif;
     font-weight: bold;
-   
+
 }
-.item7{
+
+.item7 {
     width: 15%;
     margin-top: 15px;
     text-align: center;
     font-family: 'News Cycle', sans-serif;
     font-weight: bold;
-    
+
 }
-.line{
+
+.line {
     width: 3px;
     height: 100%;
     transition: background-color 0.2s ease-in-out 0s;
     background-color: rgb(169, 172, 177);
 }
-.top_head1{
+
+.top_head1 {
     width: 100%;
     display: flex;
     flex-direction: row;
-   height: 120px;
-   background-color: rgb(250, 248, 248);
-   
+    border-bottom: 1px solid rgb(217, 224, 232);
+    border-top: 1px solid rgb(217, 224, 232);
+    margin-top: 4px;
 }
-.items1{
-    width: 10%;
-    margin-top: 15px;
-    display: flex;
-    flex-direction: row;
-   
-} 
-.items2{
-    width: 25%;
-    margin-top: 15px;
-    display: flex;
-    flex-direction: row;
-    font-family: 'News Cycle', sans-serif;
-    font-weight: bold;
-}
-.items3{
-    width: 15%;
-    margin-top: 15px;
-   display: flex;
-   flex-direction: row;
-   font-family: 'News Cycle', sans-serif;
-   font-weight: bold;
-  
 
+.top_head1 .section {
+    width: 25%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
-.items4{
-    width: 15%;
-    margin-top: 15px;
-    display: flex;
-    flex-direction: row;
-    font-family: 'News Cycle', sans-serif;
-    font-weight: bold;
-}
-.items5{
-    width: 15%;
-    margin-top: 15px;
-    display: flex;
-    flex-direction: row;
-    font-family: 'News Cycle', sans-serif;
-    font-weight: bold;
-}
-.items6{
-    width: 15%;
-    margin-top: 15px;
-    text-align: center;
-    font-family: 'News Cycle', sans-serif;
-    font-weight: bold;
-}
-.items7{
-    width: 15%;
-    margin-top: 15px;
-    text-align: center;
-    font-family: 'News Cycle', sans-serif;
-    font-weight: bold;
-}
-.image1{
+
+.image1 {
     width: 100px;
     height: 100px;
-    margin-right: 20px;
+    margin-right: 10px;
 }
-.pics
-{
+
+.pics {
     width: 10px;
     height: 10px;
 }
-.icon1{
+
+.icon1 {
     width: 15px;
     height: 15px;
     margin-top: 20px;
     margin-left: 20px;
 }
-.form_check_input{
+
+.form_check_input {
     margin-left: 10px;
     margin-bottom: 45px;
 }
-.sub_item{
+
+.sub_item {
     display: flex;
     flex-direction: row;
     margin-top: 5px;
+    font-weight: bold;
 }
-.icon2{
+
+.icon2 {
     width: 15px;
     height: 15px;
     margin-left: 20px;
 }
-.sub_itemhead{
-    margin-left: 10px;
-}
-.icon3{
-    width: 23px;
-    height: 23px;
-  
-}
-.text1{
-    margin-left: 10px;
-    color: rgb(10, 10, 235);
-}
-.text2{
-    margin-right: 20px;
-}
-.text3{
-    margin-left: 80px;
-    margin-right: 20px;
-}
-.icon4{
-    width: 15px;
-    height: 15px;
-}
-.text4{
-    margin-left: 80px;
-    margin-right: 20px;
-}
-.icon5{
-    width: 15px;
-    height: 15px;
-}
-.text5{
-    margin-left: 30px;
-}
-.icon6{
-    width: 100px;
-    display: flex;
-    flex-direction: row;
-    color: gold;
-    margin-left: 30px;
-    margin-bottom: 40px;
+
+.sub_item_head {
+    flex-direction: column;
+    margin-left: 16px;
 }
