adding new logo and design adjustments

--- a/src/pages/landing_page/homepagestyle.module.css
+++ b/src/pages/landing_page/homepagestyle.module.css
@@ -17,7 +17,7 @@
     height: 600px;
 }
 
-#Image {
+.Image {
     background-size: cover;
     height: 500px;
 }
@@ -25,11 +25,13 @@
 .home_title {
     font-weight: 600;
     letter-spacing: 1.8px;
-    max-width: 400px;
+    width: 400px;
     color: var(--primary-color-2);
     line-height: 1.2;
     font-size: 2.5rem;
-    margin: 0%;
+    margin: 0px;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
 }
 
 .home_subtitle {
@@ -63,7 +65,7 @@
     padding: 1.2rem 2.4rem;
     background-color: var(--primary-color-2);
     border: 1px solid var(--primary-color-2);
-    color: var(--white);
+    color: var(--primary-color-2-light-2);
     width: 92%;
     transition: all 0.3s ease-in-out;
     font-size: 16px;
@@ -131,7 +133,15 @@ h5 {
 }
 
 @media(max-width:1100px) {
-    #Image {
+    .home_title {
+        font-size: 34px;
+    }
+
+    .home_subtitle {
+        font-size: 16px;
+    }
+
+    .Image {
         height: 400px;
     }
 
@@ -149,8 +159,16 @@ h5 {
         height: fit-content;
     }
 
-    #Image {
-        height: 500px;
+    .title {
+        padding-left: 0px;
+    }
+
+    .Image {
+        height: 350px;
+    }
+
+    .home_title_form {
+        padding-left: 0px;
     }
 
     .Container {
