--- a/src/pages/dashboard/dashboardstyle.module.css
+++ b/src/pages/dashboard/dashboardstyle.module.css
@@ -1,22 +1,23 @@
-:root {
-    --helper-color: #1264fa;
-    --white: #fff;
-    --primary-color-2: #1C8090;
+.wrapper {
+    padding: 20px;
 }
-body
-{
-    background-color: #f1f3f6;
+
+@media(max-width:1100px) {
+    .wrapper {
+        margin-top: 20px;
+    }
 }
+
 .text {
     width: 100%;
     margin-top: 40px;
 }
 
 .text1 {
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
     font-weight: 400;
-    color:var(--primary-color-2);
+    color: var(--primary-color-2);
     margin-left: 50px;
 }
 
@@ -100,7 +101,7 @@ h1 {
     justify-content: center;
     padding-left: 0%;
     overflow: hidden;
-    color:var(--primary-color-2);
+    color: var(--primary-color-2);
     height: 70px;
     margin-top: 2px;
     text-decoration: none;
