--- a/src/pages/dashboard/dashboardstyle.module.css
+++ b/src/pages/dashboard/dashboardstyle.module.css
@@ -2,37 +2,21 @@
     padding: 20px;
 }
 
-@media(max-width:1100px) {
-    .wrapper {
-        margin-top: 20px;
-    }
-}
-
 .text {
     width: 100%;
-    margin-top: 40px;
 }
 
 .text1 {
-    font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
     font-weight: 400;
     color: var(--primary-color-2);
-    margin-left: 50px;
-}
-
-h1 {
-    display: flex;
-    justify-content: center;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
 }
 
 .container3 {
     display: grid;
-    column-gap: 20px;
+    column-gap: 10px;
     width: 100%;
-    row-gap: 30px;
+    row-gap: 70px;
     margin-top: 40px;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
@@ -41,28 +25,20 @@ h1 {
     width: 90%;
     background-size: cover;
     background-color: #fff;
-    height: 150px;
+    min-height: 180px;
     overflow: hidden;
-    border-radius: 15px;
+    border-radius: 6px;
     padding: 14px 16px;
     z-index: 2;
-    box-shadow: 0px 8px 10px rgb(192, 186, 186);
-}
-
-#text1 {
-    font-family: 'Nunito Sans', 'Source Sans Pro', sans-serif;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 1.375;
-    color: #ffffff;
+    box-shadow: 0px 3px 5px rgb(192, 186, 186);
 }
 
 .text2 {
     font-size: 13px;
     font-weight: 600;
     margin-top: 5px;
+    margin-bottom: 5px;
     color: #646464;
-    overflow: hidden;
     text-overflow: ellipsis;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
@@ -71,10 +47,9 @@ h1 {
 }
 
 .tool_head {
-    position: relative;
     display: flex;
     align-items: flex-start;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
 }
 
 .tool_icon {
@@ -86,10 +61,6 @@ h1 {
     justify-content: center;
     flex-shrink: 0;
     color: #0081ff;
-}
-
-.fa-solid {
-    font-size: 200px;
 }
 
 .tool_head_text {
@@ -111,27 +82,8 @@ h1 {
 .tool_body {
     font-size: 13px;
     font-weight: 500;
-    text-align: justify;
-    font-family: 'Nunito Sans', sans-serif;
     letter-spacing: .5px;
-    line-height: 18px;
     color: #646464;
-    max-height: 250px;
-}
-
-.con2 {
-    background-size: cover;
-    position: static;
-    width: 100%;
-    height: 150px;
-
-}
-
-.con3 {
-    background-size: cover;
-    position: static;
-    width: 100%;
-    height: 150px;
 }
 
 .con4 {
@@ -143,10 +95,4 @@ h1 {
 
 .con4:hover {
     cursor: pointer;
-}
-
-.button1:hover {
-    cursor: pointer;
-    background-color: var(--helper-color);
-    color: var(--white);
 }
