--- a/src/pages/authentication/User_Profile/profile.module.css
+++ b/src/pages/authentication/User_Profile/profile.module.css
@@ -1,45 +1,56 @@
-.sub_userprofile{
-    width: 80%;
-    box-shadow: 0 3px 10px rgb(48, 45, 45);
+.sub_userprofile {
+    width: 50%;
+    height: 1000px;
+    box-shadow: 0 3px 10px#2bbfd3;
     border-radius: 8px;
     margin-top: 20px;
     margin-bottom: 20px;
-   text-align: center;
-   background-color: #fff;
+    text-align: center;
+    background-color: #fff;
 }
-.main_profile{
+
+.main_profile {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-    background-color: #1C8090;
-
+    background-image: url("image.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    
 }
 
 
 
-.image{
+
+
+.image {
     width: 100px;
     height: 100px;
     border-radius: 100%;
+
 }
-.link{
-    
+
+.link {
+
     margin-top: 40px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #1C8090;
-    font-size:20px;
+    font-size: 20px;
     letter-spacing: 1px;
-    
+
 }
-.link:hover{
+
+.link:hover {
     color: blue;
 }
-.profilepic{
+
+.profilepic {
     display: flex;
     flex-direction: row;
-    margin-left: 350px;
-   
-    
+
 }
+
 .input {
     height: auto;
     line-height: 1.375;
@@ -49,76 +60,85 @@
     font-weight: 400;
     width: 400px;
     flex-wrap: wrap;
-    margin-top: 20px;
 }
-.text{
+
+.text {
     color: #1C8090;
     font-size: 20px;
     margin-top: 15px;
     font-family: 'Nunito Sans', sans-serif;
-    
+
 }
-.heading{
+
+.heading {
     color: #1C8090;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 25px;
-    font-weight:bold;
+    font-weight: bold;
     margin-top: 50px;
     margin-bottom: 50px;
 
 }
-.main2{
+
+.main2 {
     display: flex;
     justify-content: center;
 }
-.text1{
+
+.text1 {
     margin-right: 370px;
 }
-.text2{
+
+.text2 {
     margin-right: 370px;
 }
-.text3{
+
+.text3 {
     margin-right: 300px;
 }
-.text4{
+
+.text4 {
     margin-right: 260px;
 }
-.text5{
+
+.text5 {
     margin-right: 285px;
 }
-.btn1
-{
-  background-color: #1C8090;
-  border: 1px solid #1C8090;
-  color: var(--white);
-  width: 150px;
-  height: 40px;
-  margin-right: 10px;
-  transition: all 0.3s ease-in-out;
-  font-size: 16px;
-  letter-spacing: 2px;
-  font-weight: 500;
-  text-align: center;
-  text-transform: uppercase;
-  display: inline-block;
-  border-radius: 8px;
- 
+
+.btn1 {
+    background-color: #1C8090;
+    ;
+    border: 1px solid #1C8090;
+    ;
+    color: var(--white);
+    width: 110px;
+    height: 40px;
+    margin-right: 10px;
+    transition: all 0.3s ease-in-out;
+    font-size: 13px;
+    font-weight: 500;
+    text-align: center;
+    text-transform: uppercase;
+    display: inline-block;
+    border-radius: 8px;
+
 }
 
 .btn1:hover,
-.btn1:active
-{
-  background-color: var(--white);
-  color:#1C8090 ;}
-  :root {
+.btn1:active {
+    background-color: var(--white);
+    color: #1C8090;
+}
+
+:root {
     --primary-color: #000839;
     --primary-shades: #00020b;
     --para-color: #80849c;
     --helper-color: #0081ff;
     --white: #fff;
     --bg-color: #e6e6eb;
-  }
-  .button{
+}
+
+.button {
     margin-top: 50px;
-    margin-bottom: 50px;
-  }
+}
