--- a/src/pages/dashboard/blackbox/blackbox.module.css
+++ b/src/pages/dashboard/blackbox/blackbox.module.css
@@ -1,128 +1,10 @@
-.main_form {
-    display: flex;
-    flex-direction: row;
-}
-
-.heading1 {
-    font-stretch: normal;
-    font-style: normal;
-    letter-spacing: normal;
-    margin: 0px 0px -8px;
-    padding: 0px;
-    text-transform: none;
-    font-size: 18px;
-    line-height: 26px;
-    color: rgb(19, 25, 31);
-    font-weight: 700;
-}
-
-h2 {
-    margin: 0px;
-}
-
-.Subheading1 {
-    font-stretch: normal;
-    font-style: normal;
-    letter-spacing: normal;
-    margin: 0px;
-    padding: 0px;
-    text-transform: none;
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 700;
-    color: rgb(72, 94, 117);
-}
-
-.h2 {
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: normal;
-    letter-spacing: normal;
-    margin: 0px;
-    padding: 0px;
-    text-transform: none;
-    font-size: 16px;
-    line-height: 24px;
-    color: rgb(166, 183, 201);
-    position: absolute;
-    top: 0px;
-    left: 5px;
-    height: 100%;
+.wrapper {
     width: 100%;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    padding-top: 20px;
+    padding-right: 20px;
 }
 
-.line {
-    height: 1px;
-    background-color: rgb(87, 94, 102);
-    width: 60%;
-}
-
-.Min {
-    background: none;
-    height: 100%;
-    width: 60%;
-    display: block;
-    padding: 0px;
-    font: inherit;
-    min-height: 32px;
-    margin: 0px;
-    font-size: 16px;
-    line-height: 24px;
-    color: rgb(43, 57, 72);
-    border-radius: 6px;
-    border: 1px solid rgb(103, 132, 162);
-}
-
-.Max {
-    background: none;
-    height: 100%;
-    width: 100%;
-    display: block;
-    padding: 0px 15px;
-    font: inherit;
-    min-height: 32px;
-    font-size: 16px;
-    line-height: 24px;
-    color: rgb(43, 57, 72);
-    border-radius: 6px;
-    border: 1px solid rgb(103, 132, 162);
-}
-
-.Min_text {
-    display: flex;
-    flex-direction: row;
-}
-
-.Brand_search {
-    background: none;
-    height: 100%;
-    width: 80%;
-    display: block;
-    padding: 0px;
-    font: inherit;
-    min-height: 32px;
-    margin-left: 0%;
-    font-size: 16px;
-    line-height: 24px;
-    color: rgb(43, 57, 72);
-    border-radius: 6px;
-    border: 1px solid rgb(103, 132, 162);
-}
-
-.div_30 {
-    width: 30%;
-    height: fit-content;
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
-.head1 {
+.heading {
     font-stretch: normal;
     font-style: normal;
     letter-spacing: normal;
@@ -135,7 +17,7 @@ h2 {
     margin: 4px 0px 0px;
 }
 
-.head2 {
+.subHeading {
     font-stretch: normal;
     font-style: normal;
     font-weight: normal;
@@ -155,7 +37,15 @@ h2 {
     padding: 24px;
 }
 
-.sub_head {
+.cardHeader {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+}
+
+.mainSubHeading {
     font-stretch: normal;
     font-style: normal;
     letter-spacing: normal;
@@ -169,53 +59,102 @@ h2 {
     white-space: nowrap;
 }
 
-.select {
-    height: 32px;
+.dropDownDomain {
+    min-height: 32px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: normal;
+    letter-spacing: normal;
+    margin: 0px;
+    text-transform: none;
+    font-size: 16px;
+    line-height: 24px;
+    color: rgb(43, 57, 72);
     border-radius: 6px;
-    padding: 0px 12px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(103, 132, 162);
+    outline: transparent solid 2px;
+    outline-offset: -2px;
+    transition: box-shadow 0.2s ease 0s, background-color 0.2s ease 0s, border-color 0.2s ease 0s, outline-color 0.2s ease 0s;
+    flex-wrap: nowrap;
+    padding: 5px 12px;
 }
 
-.btn1 {
-    background-color: var(--helper-color);
-    border: 1px solid var(--helper-color);
-    color: var(--white);
-    width: 80px;
-    height: 40px;
-    margin-right: 10px;
-    transition: all 0.3s ease-in-out;
-    font-size: 13px;
-    font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
-    display: inline-block;
-    border-radius: 8px;
-
-}
-
-.btn2 {
-    background: var(--primary-color-2);
-    border: 1px solid var(--primary-color-2);
-    color: var(--white);
-    width: 80px;
-    height: 40px;
-    transition: all 0.3s ease-in-out;
-    font-size: 13px;
-    font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
-    display: inline-block;
-    border-radius: 8px;
-}
-
-.button button:hover,
-.button button:active {
-    background: var(--primary-color-2-light);
-}
-
-.button {
+.cardForm {
+    width: 100%;
     display: flex;
-    justify-content: flex-end;
-    place-items: center;
-    height: 100px;
-    margin-top: 50px;
+    flex-direction: row;
+    gap: 20%;
+    flex-wrap: wrap;
+    padding-top: 25px;
+    border-top: 1px solid lightgrey;
+}
+
+.field {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid lightgrey;
+    margin-bottom: 20px;
+}
+
+.fieldTitle {
+    font-stretch: normal;
+    font-style: normal;
+    letter-spacing: normal;
+    margin: 0px;
+    padding: 0px;
+    text-transform: none;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 700;
+    color: rgb(72, 94, 117);
+}
+
+.fieldInput {
+    min-height: 30px;
+    padding: 0px 8px;
+    border-width: 1px;
+    border-radius: 6px;
+}
+
+.formButton {
+    flex: 0 0 auto;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    border-radius: 6px;
+    font-weight: 700;
+    border-width: 1px;
+    border-style: solid;
+    line-height: 1em;
+    text-decoration: none;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.2s ease-in-out 0s;
+    min-height: 40px;
+    padding: 8px 16px;
+    font-size: 16px;
+    background: #29c0d7;
+    border-color: #29c0d7;
+    color: rgb(255, 255, 255);
+    outline: none !important;
+}
+
+.formActions {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+}
+
+@media(max-width:992px) {
+    .field {
+        width: 40%;
+    }
 }
