--- a/src/Component/sidebar/sidebar.module.scss
+++ b/src/Component/sidebar/sidebar.module.scss
@@ -1,66 +1,80 @@
 .sidebarMain {
-    width: 14vw;
-    height: 96vh;
-    background-color: white;
-    // box-shadow: 1px 1px lightgrey;
-    padding-left: 20px;
-    padding-top: 5px;
-    padding-right: 20px;
+  width: 14vw;
+  height: 96vh;
+  background-color: white;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  margin-left: 10px;
+  margin-top: 12px;
+  border: 1px solid lightgrey;
+  border-radius: 15px;
+
+  .header {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    border-bottom: 1px solid lightgrey;
+    margin-bottom: 30px;
 
-    margin-left: 10px;
-    margin-top: 12px;
-    border: 1px solid lightgrey;
-    border-radius: 15px;
-
-    .header {
-        display: flex;
-        flex-direction: row;
-        gap: 10px;
-        align-items: center;
-        border-bottom: 1px solid lightgrey;
-        margin-bottom: 30px;
-
-        .sidebarLogo {
-            width: 170px;
-        }
+    .sidebarLogo {
+      width: 130px;
     }
+  }
 }
 
 .menus {
-    width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  .menuItem {
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    gap: 10px;
+    color: grey;
+    padding-top: 10px;
+    padding-bottom: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 8px;
 
-    .menuItem {
-        display: flex;
-        gap: 10px;
-        color: grey;
-        padding-top: 10px;
-        padding-bottom: 6px;
-        padding-left: 10px;
-        padding-right: 10px;
-        border-radius: 8px;
-
-        p {
-            font-weight: 500;
-        }
+    p {
+      font-weight: 500;
     }
+  }
 
-    .activeMenu {
-        background-color: #1C8090;
-        color: white;
-    }
-
+  .activeMenu {
+    background-color: #1c8090;
+    color: white;
+  }
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .collapsed {
-    width:fit-content;
+  width: fit-content;
+}
+
+@media (max-width: 800px) {
+  .sidebarMain {
+    .header {
+      .sidebarLogo {
+        width: 80px;
+      }
+    }
+  }
+
+  .menuItem {
+    p {
+      font-size: 12px;
+    }
+  }
 }
