--- a/src/pages/authentication/Login/login.module.css
+++ b/src/pages/authentication/Login/login.module.css
@@ -48,6 +48,16 @@
     color: #495057;
 }
 
+.forgetPasswordHolder {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.forgetPasswordHolder p {
+    color:#135863;
+    font-weight: 600;
+}
+
 .text {
     font-weight: 500;
     font-size: 16px;
