--- a/src/pages/authentication/User_Profile/profile.module.css
+++ b/src/pages/authentication/User_Profile/profile.module.css
@@ -1,144 +1,93 @@
-.sub_userprofile {
-    width: 50%;
-    height: 1000px;
-    box-shadow: 0 3px 10px#2bbfd3;
-    border-radius: 8px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: center;
-    background-color: #fff;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
 }
 
-.main_profile {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    background-image: url("image.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    
+.userCard {
+  border: 1px solid lightgrey;
+  border-radius: 8px;
+  padding: 20px 40px;
 }
 
-
-
-
-
-.image {
-    width: 100px;
-    height: 100px;
-    border-radius: 100%;
-
+.imageCard {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
-.link {
-
-    margin-top: 40px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #1C8090;
-    font-size: 20px;
-    letter-spacing: 1px;
-
+.userImageHolder {
+  min-width: 160px;
+  height: 120px;
 }
 
-.link:hover {
-    color: blue;
+.userImage {
+  width: 120px;
+  height: 120px;
+  border-radius: 20px;
 }
 
-.profilepic {
-    display: flex;
-    flex-direction: row;
-
+.imageTopCornerButton {
+  position: relative;
+  right: 20px;
+  width: fit-content;
+  background-color: #1c8090;
+  padding: 5px;
+  color: white;
+  font-size: 18px;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
-.input {
-    height: auto;
-    line-height: 1.375;
-    letter-spacing: .46px;
-    padding: 14px 11px;
-    font-size: 16px;
-    font-weight: 400;
-    width: 400px;
-    flex-wrap: wrap;
+.userTextInfoHolder {
+  flex-grow: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
-.text {
-    color: #1C8090;
-    font-size: 20px;
-    margin-top: 15px;
-    font-family: 'Nunito Sans', sans-serif;
-
+h1,
+h4 {
+  margin: 0;
 }
 
-.heading {
-    color: #1C8090;
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 25px;
-    font-weight: bold;
-    margin-top: 50px;
-    margin-bottom: 50px;
-
+button {
+  background-color: #1c8090;
+  border: none;
+  color: white;
+  padding: 8px 20px;
+  width: fit-content;
+  border-radius: 6px;
 }
 
-.main2 {
-    display: flex;
-    justify-content: center;
+.profileFields {
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.text1 {
-    margin-right: 370px;
+.profileField {
+  width: 60%;
+  font-size: 16px;
+  font-weight: 100;
+  height: auto;
+  padding: 8px 15px;
+  border-radius: 8px;
+  border: solid 1px #003873;
+  background-color: #fff;
+  color: grey;
 }
 
-.text2 {
-    margin-right: 370px;
-}
+@media (max-width: 700px) {
+  .imageCard {
+    flex-direction: column;
+  }
 
-.text3 {
-    margin-right: 300px;
-}
-
-.text4 {
-    margin-right: 260px;
-}
-
-.text5 {
-    margin-right: 285px;
-}
-
-.btn1 {
-    background-color: #1C8090;
-    ;
-    border: 1px solid #1C8090;
-    ;
-    color: var(--white);
-    width: 110px;
-    height: 40px;
-    margin-right: 10px;
-    transition: all 0.3s ease-in-out;
-    font-size: 13px;
-    font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
-    display: inline-block;
-    border-radius: 8px;
-
-}
-
-.btn1:hover,
-.btn1:active {
-    background-color: var(--white);
-    color: #1C8090;
-}
-
-:root {
-    --primary-color: #000839;
-    --primary-shades: #00020b;
-    --para-color: #80849c;
-    --helper-color: #0081ff;
-    --white: #fff;
-    --bg-color: #e6e6eb;
-}
-
-.button {
-    margin-top: 50px;
+  h1 {
+    font-size: 24px;
+  }
 }
