--- a/src/pages/dashboard/blackbox/blackbox.module.css
+++ b/src/pages/dashboard/blackbox/blackbox.module.css
@@ -140,8 +140,8 @@
     min-height: 40px;
     padding: 8px 16px;
     font-size: 16px;
-    background: #29c0d7;
-    border-color: #29c0d7;
+    background: #1c8090;
+    border-color: #1c8090;
     color: rgb(255, 255, 255);
     outline: none !important;
 }
